--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -69,7 +69,7 @@ library
     , deepseq     >=1.3.0.2 && <1.5
     , fin         ^>=0.2
     , hashable    >=1.2.7.0 && <1.4
-    , QuickCheck  ^>=2.13.2 || ^>=2.14
+    , QuickCheck  ^>=2.14.2
 
   if !impl(ghc >=7.10)
     build-depends: nats ^>=1.1.2
