--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -135,7 +135,7 @@ library
     build-depends: transformers >=0.4.2.0
 
   else
-    build-depends: transformers-compat ^>=0.6.5
+    build-depends: transformers-compat ^>=0.6.5 || ^>=0.7.1
 
   -- siblings
   build-depends:            fin ^>=0.2.1
