--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -185,7 +185,7 @@ test-suite inspection
     , base
     , base-compat
     , fin
-    , inspection-testing  ^>=0.4.2.2
+    , inspection-testing  >=0.4.2.2 && <0.6
     , tagged
     , vec
 
