--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,9 +8,9 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.13.20211116
+# version: 0.15.20220822
 #
-# REGENDATA ("0.13.20211116",["github","--config=cabal.haskell-ci","cabal.project"])
+# REGENDATA ("0.15.20220822",["github","--config=cabal.haskell-ci","cabal.project"])
 #
 name: Haskell-CI
 on:
@@ -23,7 +23,7 @@ on:
 jobs:
   linux:
     name: Haskell-CI - Linux - ${{ matrix.compiler }}
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     timeout-minutes:
       60
     container:
@@ -90,18 +90,18 @@ jobs:
           apt-get install -y --no-install-recommends gnupg ca-certificates dirmngr curl git software-properties-common libtinfo5
           if [ "${{ matrix.setup-method }}" = ghcup ]; then
             mkdir -p "$HOME/.ghcup/bin"
-            curl -sL https://downloads.haskell.org/ghcup/0.1.17.3/x86_64-linux-ghcup-0.1.17.3 > "$HOME/.ghcup/bin/ghcup"
+            curl -sL https://downloads.haskell.org/ghcup/0.1.18.0/x86_64-linux-ghcup-0.1.18.0 > "$HOME/.ghcup/bin/ghcup"
             chmod a+x "$HOME/.ghcup/bin/ghcup"
-            "$HOME/.ghcup/bin/ghcup" install ghc "$HCVER"
-            "$HOME/.ghcup/bin/ghcup" install cabal 3.6.2.0
+            "$HOME/.ghcup/bin/ghcup" install ghc "$HCVER" || (cat "$HOME"/.ghcup/logs/*.* && false)
+            "$HOME/.ghcup/bin/ghcup" install cabal 3.6.2.0 || (cat "$HOME"/.ghcup/logs/*.* && false)
           else
             apt-add-repository -y 'ppa:hvr/ghc'
             apt-get update
             apt-get install -y "$HCNAME"
             mkdir -p "$HOME/.ghcup/bin"
-            curl -sL https://downloads.haskell.org/ghcup/0.1.17.3/x86_64-linux-ghcup-0.1.17.3 > "$HOME/.ghcup/bin/ghcup"
+            curl -sL https://downloads.haskell.org/ghcup/0.1.18.0/x86_64-linux-ghcup-0.1.18.0 > "$HOME/.ghcup/bin/ghcup"
             chmod a+x "$HOME/.ghcup/bin/ghcup"
-            "$HOME/.ghcup/bin/ghcup" install cabal 3.6.2.0
+            "$HOME/.ghcup/bin/ghcup" install cabal 3.6.2.0 || (cat "$HOME"/.ghcup/logs/*.* && false)
           fi
         env:
           HCKIND: ${{ matrix.compilerKind }}
@@ -177,7 +177,7 @@ jobs:
       - name: cache (tools)
         uses: actions/cache@v2
         with:
-          key: ${{ runner.os }}-${{ matrix.compiler }}-tools-8df336bd
+          key: ${{ runner.os }}-${{ matrix.compiler }}-tools-2369439b
           path: ~/.haskell-ci-tools
       - name: install cabal-plan
         run: |
@@ -199,7 +199,7 @@ jobs:
           cabal-docspec --version
       - name: install doctest
         run: |
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then $CABAL --store-dir=$HOME/.haskell-ci-tools/store v2-install $ARG_COMPILER --ignore-project -j2 doctest --constraint='doctest ^>=0.17' ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then $CABAL --store-dir=$HOME/.haskell-ci-tools/store v2-install $ARG_COMPILER --ignore-project -j2 doctest --constraint='doctest ^>=0.20' ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest --version ; fi
       - name: checkout
         uses: actions/checkout@v2
@@ -209,7 +209,6 @@ jobs:
         run: |
           touch cabal.project
           echo "packages: $GITHUB_WORKSPACE/source/bin" >> cabal.project
-          echo "packages: $GITHUB_WORKSPACE/source/dec" >> cabal.project
           echo "packages: $GITHUB_WORKSPACE/source/fin" >> cabal.project
           echo "packages: $GITHUB_WORKSPACE/source/ral" >> cabal.project
           echo "packages: $GITHUB_WORKSPACE/source/vec" >> cabal.project
@@ -231,8 +230,6 @@ jobs:
         run: |
           PKGDIR_bin="$(find "$GITHUB_WORKSPACE/unpacked" -maxdepth 1 -type d -regex '.*/bin-[0-9.]*')"
           echo "PKGDIR_bin=${PKGDIR_bin}" >> "$GITHUB_ENV"
-          PKGDIR_dec="$(find "$GITHUB_WORKSPACE/unpacked" -maxdepth 1 -type d -regex '.*/dec-[0-9.]*')"
-          echo "PKGDIR_dec=${PKGDIR_dec}" >> "$GITHUB_ENV"
           PKGDIR_fin="$(find "$GITHUB_WORKSPACE/unpacked" -maxdepth 1 -type d -regex '.*/fin-[0-9.]*')"
           echo "PKGDIR_fin=${PKGDIR_fin}" >> "$GITHUB_ENV"
           PKGDIR_ral="$(find "$GITHUB_WORKSPACE/unpacked" -maxdepth 1 -type d -regex '.*/ral-[0-9.]*')"
@@ -253,7 +250,6 @@ jobs:
           touch cabal.project
           touch cabal.project.local
           echo "packages: ${PKGDIR_bin}" >> cabal.project
-          echo "packages: ${PKGDIR_dec}" >> cabal.project
           echo "packages: ${PKGDIR_fin}" >> cabal.project
           echo "packages: ${PKGDIR_ral}" >> cabal.project
           echo "packages: ${PKGDIR_vec}" >> cabal.project
@@ -263,8 +259,6 @@ jobs:
           if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then echo "packages: ${PKGDIR_vec_optics}" >> cabal.project ; fi
           echo "packages: ${PKGDIR_tests}" >> cabal.project
           if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "package bin" >> cabal.project ; fi
-          if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "    ghc-options: -Werror=missing-methods" >> cabal.project ; fi
-          if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "package dec" >> cabal.project ; fi
           if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "    ghc-options: -Werror=missing-methods" >> cabal.project ; fi
           if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "package fin" >> cabal.project ; fi
           if [ $((HCNUMVER >= 80200)) -ne 0 ] ; then echo "    ghc-options: -Werror=missing-methods" >> cabal.project ; fi
@@ -287,7 +281,7 @@ jobs:
           allow-newer: vector-th-unbox-0.2.1.7:base
           allow-newer: vector-th-unbox-0.2.1.7:template-haskell
           EOF
-          $HCPKG list --simple-output --names-only | perl -ne 'for (split /\s+/) { print "constraints: $_ installed\n" unless /^(bin|dec|fin|ral|ral-lens|ral-optics|tests|vec|vec-lens|vec-optics)$/; }' >> cabal.project.local
+          $HCPKG list --simple-output --names-only | perl -ne 'for (split /\s+/) { print "constraints: $_ installed\n" unless /^(bin|fin|ral|ral-lens|ral-optics|tests|vec|vec-lens|vec-optics)$/; }' >> cabal.project.local
           cat cabal.project
           cat cabal.project.local
       - name: dump install plan
@@ -316,25 +310,23 @@ jobs:
       - name: doctest
         run: |
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_bin} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_dec} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_fin} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_ral} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_vec} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_ral_lens} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_vec_lens} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_ral_optics} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_vec_optics} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
           if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then cd ${PKGDIR_tests} || false ; fi
-          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  src ; fi
+          if [ $((HCNUMVER >= 80600 && HCNUMVER < 90000)) -ne 0 ] ; then doctest  -XHaskell2010 src ; fi
       - name: docspec
         run: |
           if [ $((HCNUMVER >= 80000)) -ne 0 ] ; then $CABAL v2-build $ARG_COMPILER $ARG_TESTS $ARG_BENCH all ; fi
@@ -342,8 +334,6 @@ jobs:
       - name: cabal check
         run: |
           cd ${PKGDIR_bin} || false
-          ${CABAL} -vnormal check
-          cd ${PKGDIR_dec} || false
           ${CABAL} -vnormal check
           cd ${PKGDIR_fin} || false
           ${CABAL} -vnormal check
