--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -69,13 +69,13 @@ library
 
   other-modules:    TrustworthyCompat
   build-depends:
-    , base        >=4.7     && <4.20
+    , base        >=4.7     && <4.21
     , boring      ^>=0.2
     , dec         ^>=0.0.3
     , deepseq     >=1.3.0.2 && <1.6
     , fin         ^>=0.3
     , hashable    >=1.2.7.0 && <1.5
-    , QuickCheck  ^>=2.14.2
+    , QuickCheck  >=2.14.2 && <2.16
     , some        ^>=1.0.4
 
   if !impl(ghc >=7.10)
