--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -89,7 +89,7 @@ library
 
   -- GHC boot libs
   build-depends:
-    , base     >=4.7     && <4.20
+    , base     >=4.7     && <4.21
     , deepseq  >=1.3.0.1 && <1.6
 
   if !impl(ghc >=8.0)
@@ -105,7 +105,7 @@ library
     , boring               ^>=0.2
     , hashable             >=1.2.7.0 && <1.5
     , indexed-traversable  ^>=0.1.1
-    , QuickCheck           ^>=2.14.2
+    , QuickCheck           >=2.14.2 && <2.16
 
   if flag(distributive)
     build-depends: distributive >=0.5.3 && <0.7
