--- a/vec-lens/vec-lens.cabal
+++ b/vec-lens/vec-lens.cabal
@@ -52,7 +52,7 @@ library
     Data.Vec.Pull.Lens
 
   -- GHC boot libs
-  build-depends:    base >=4.7 && <4.20
+  build-depends:    base >=4.7 && <4.21
 
   -- siblings
   build-depends:
@@ -60,7 +60,7 @@ library
     , vec  ^>=0.4 || ^>=0.5
 
   -- other dependencies
-  build-depends:    lens ^>=4.18.1 || ^>=4.19.1 || ^>=5 || ^>=5.1 || ^>=5.2
+  build-depends:    lens ^>=4.18.1 || ^>=4.19.1 || ^>=5 || ^>=5.1 || ^>=5.2 || ^>=5.3
   other-extensions:
     CPP
     FlexibleContexts
